fixed excess padding on mobile screens

--- a/assets/sass/layouts/_footer.scss
+++ b/assets/sass/layouts/_footer.scss
@@ -113,7 +113,8 @@ footer {
     footer {
         div.top-container {
             div:first-of-type {
-                margin-bottom: 10%;
+                margin-bottom: 5%;
+                padding: 0;
             }
         }
         div.bottom-container {
